--- a/nowj/src/main/resources/templates/contract-upload.html
+++ b/nowj/src/main/resources/templates/contract-upload.html
@@ -22,7 +22,7 @@
                     alt="NOWJ Logo" class="me-2 rounded-circle" style="width: 40px; height: 40px;"> NOWJ
             </div>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action">
+                <a href="/dashboard" class="list-group-item list-group-item-action">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
                 <a href="/upload" class="list-group-item list-group-item-action active">
@@ -33,6 +33,9 @@
                 </a>
                 <a href="#" class="list-group-item list-group-item-action">
                     <i class="fas fa-cogs"></i> Cài Đặt
+                </a>
+                <a href="/logout" class="list-group-item list-group-item-action text-danger">
+                    <i class="fas fa-sign-out-alt"></i> Đăng xuất
                 </a>
             </div>
         </div>
